docker-compose works with nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,34 +1,98 @@
-events {}
+worker_processes auto;
+
+events {
+	worker_connections 1024;
+	multi_accept on;
+	use epoll;
+}
 
 http {
+	charset utf-8;
+	sendfile on;
+	tcp_nopush on;
+	tcp_nodelay off;
+	types_hash_max_size 2048;
+
+	uwsgi_cache_path /tmp/nginx_cache levels=1:2 keys_zone=microcache:10m max_size=500m;
+	add_header microcache-status $upstream_cache_status;
+
+	limit_conn_zone $binary_remote_addr 	zone=conn_lim:10m;
+	limit_req_zone $binary_remote_addr 		zone=req_lim:10m rate=10r/s;
+
+	open_file_cache 			max=1000 inactive=20s;
+	open_file_cache_valid 		30s;
+	open_file_cache_min_uses 	2;
+	open_file_cache_errors		on;
+
+	client_body_buffer_size 	16k;
+	client_header_buffer_size 	1k;
+	client_max_body_size 		8m;
+	large_client_header_buffers 2 1k;
+
+	client_body_timeout 	12;
+	client_header_timeout 	12;
+
+	keepalive_timeout 300;
+
+	send_timeout 10;
+
+	upstream app {
+		server 0.0.0.0:8000;
+		#server unix:////home/anton/Desktop/django-linkhub/app/mysite.sock; for sockets
+	}
+
 	server {
-		server_name some_name;
+		server_name app;
+		listen 80;
+		
+		gzip on;
+		gzip_min_length 100;
+		gzip_comp_level 3;
+		gzip_types text/plain text/css text/javascript;
+		gzip_disable 'msie6';
 
 		location / {
-			proxy_pass http://0.0.0.0:8000;
+			uwsgi_pass app;
+			include /etc/nginx/uwsgi_params;
+
+			limit_req zone=req_lim burst=5;
+			limit_conn conn_lim 1;			
+
+			# uwsgi_cache microcache;
+			# uwsgi_cache_valid 200 60m;
+			# uwsgi_cache_key $scheme$proxy_host$uri$is_args$args;
+
+			# uwsgi_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie Vary;
 		}
 
 		location /static/ {
-                        alias /home/anton/Desktop/django-linkhub/app/full_static/;
-                }
+			expires 1M;
+
+			add_header Pragma public;
+			add_header Cache-Control public;
+			add_header Vary Accept-Encoding;
+
+			alias /home/anton/Desktop/django-linkhub/app/full_static/; # your path to static files
+			uwsgi_cache microcache;
+			uwsgi_cache_valid 200 60m;
+		}
 
 		location /ws/ {
-        		try_files $uri @proxy_to_ws;
-    		}
+			try_files $uri @proxy_to_ws;
+		}
 
-    		location @proxy_to_ws {
-       			proxy_pass http://0.0.0.0:8001;
+		location @proxy_to_ws {
+			proxy_pass http://0.0.0.0:8001;
 
 			proxy_http_version 1.1;
- 			proxy_set_header Upgrade $http_upgrade;
-        		proxy_set_header Connection "upgrade";
-
-        		proxy_redirect off;
-        		proxy_set_header Host $host;
-        		proxy_set_header X-Real-IP $remote_addr;
-        		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        		proxy_set_header X-Forwarded-Host $server_name;
-    		}
-
+			proxy_set_header Upgrade $http_upgrade;
+			proxy_set_header Connection "upgrade";
+			
+			proxy_redirect off;
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Host $server_name;
+		}
 	}
 }
