--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.2.10
 celery==4.4.7
 certifi==2020.6.20
 chardet==3.0.4
+channels==3.0.2
+channels_redis==3.2.0
 defusedxml==0.6.0
 Django==3.1.2
 django-allauth==0.42.0
@@ -17,3 +19,4 @@ requests==2.24.0
 requests-oauthlib==1.3.0
 sqlparse==0.4.0
 urllib3==1.25.10
+uwsgi
