fix: .gitignore got mistake with migrations

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-*/migrations/*.py
-!*/migrations/__init__.py
+**/migrations/*.py
+!**/migrations/__init__.py
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
